Trying to fix CI build

--- a/Spelling Bee/.github/workflows/build.yml
+++ b/Spelling Bee/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: Spelling Bee
 
 on:
   push:
-    branches: [ main ]
+    branches: [ spellingBee ]
   pull_request:
-    branches: [ main ]
+    branches: [ spellingBee ]
 
 jobs:
   build:
